--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - docker build -t javierbz/react-test -f ./client/Dockerfile.dev
 
 scripts:
-  - docker run javierbz/react-test npm test -- --coverage
+  - docker run -e CI=true javierbz/react-test npm test
 
 after_success:
   - docker build -t javierbz/multi-client ./client
@@ -22,4 +22,3 @@ after_success:
   - docker push javierbz/multi-nginx
   - docker push javierbz/multi-server
   - docker push javierbz/multi-worker
-  
