--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t javierbz/react-test -f ./client/Dockerfile.dev
+  - docker build -t javierbz/react-test --file="./client/Dockerfile.dev"
 
 scripts:
   - docker run -e CI=true javierbz/react-test npm test
