--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,19 @@ after_success:
   - docker push javierbz/multi-nginx
   - docker push javierbz/multi-server
   - docker push javierbz/multi-worker
+
+
+
+deploy:
+  edge: true
+  provider: elasticbeanstalk
+  region: us-east-2
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-east-2-427899321889
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
+  
